@@ -22,6 +22,10 @@ enum _IndexedEnum {
   INDEXED_ONE_ALIAS = INDEXED_ONE,
   INDEXED_TWO,
   INDEXED_THREE,
+  INDEXED_ZERO_ALIAS = INDEXED_ZERO + 0,
+  INDEXED_ONE_ALIAS2 = INDEXED_ZERO + 1,
+  INDEXED_TWO_ALIAS = INDEXED_ZERO + 2,
+  INDEXED_TWO_ALIAS2 = INDEXED_ONE_ALIAS2 + 1,
   INDEXED_MATH = INDEXED_ONE_ALIAS + INDEXED_TWO * INDEXED_THREE
 
 };
@@ -53,9 +57,13 @@ void
 testIndexedEnum(void)
 {
   ASSERT(INDEXED_ZERO == 0);
+  ASSERT(INDEXED_ZERO_ALIAS == 0);
   ASSERT(INDEXED_ONE == 1);
   ASSERT(INDEXED_ONE_ALIAS == 1);
+  ASSERT(INDEXED_ONE_ALIAS2 == 1);
   ASSERT(INDEXED_TWO == 2);
+  ASSERT(INDEXED_TWO_ALIAS == 2);
+  ASSERT(INDEXED_TWO_ALIAS2 == 2);
   ASSERT(INDEXED_MATH == 7);
 }
 
